# Game

./: Cargo.toml
assets/sounds/: pop.mov
notes/: CardGame.excalidraw
src/: boids.rs  camera.rs  deck.rs  goal.rs  lib.rs  loading.rs  main.rs  operation.rs  utils.rs
src/board/: mod.rs
src/cards/: card.rs  deck.rs  goals.rs  hand.rs  mod.rs  rules.rs
src/game_shapes/: mod.rs
src/ui/: hud.rs  main_menu.rs  mod.rs  score_ui.rs
