[package]
name = "whoot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nithin Muthukumar"]
description = ""
repository = ""

[features]

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = "0.18.0"
bevy_tweening = "0.9.0"
bevy_kira_audio = "0.16.0"
leafwing-input-manager = "0.11.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
bevy_pancam = "0.10.0"
rand = "0.8.5"
strum_macros = "0.25.3"
strum = "0.25.0"


