[package]
name = "sham"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nithin Muthukumar"]
description = ""
repository = ""

[features]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "dynamic_linking",
    "multi-threaded",
    "png",
    "x11",
    # "webgl2"
]}
bevy_asset_loader = "0.18.0"
bevy_tweening = "0.9.0"
bevy_kira_audio = "0.16.0"
leafwing-input-manager = "0.11.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
bevy_pancam = "0.10.0"
rand = "0.8.5"
strum_macros = "0.25.3"
strum = "0.25.0"
bevy_xpbd_2d = "0.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
